--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "next": "11.1.2",
+    "next-themes": "0.0.15",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/react": "17.0.32",
+    "autoprefixer": "^10.3.7",
     "eslint": "8.1.0",
     "eslint-config-next": "11.1.2",
+    "postcss": "^8.3.11",
+    "tailwindcss": "^2.2.17",
     "typescript": "4.4.4"
   }
 }
