--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "engines": {
-    "node": ">=16.13.0"
+    "node": "16.x",
+    "npm":"8.x"
   },
   "dependencies": {
     "next": "11.1.2",
