--- a/package.json
+++ b/package.json
@@ -13,19 +13,21 @@
     "npm":"8.x"
   },
   "dependencies": {
-    "next": "11.1.2",
-    "next-themes": "0.0.15",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "12.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+
+    "next-themes": "0.2.0",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
-    "@types/react": "17.0.32",
-    "autoprefixer": "^10.3.7",
-    "eslint": "8.1.0",
-    "eslint-config-next": "11.1.2",
+    "@types/node": "18.0.0",
+    "@types/react": "18.0.14",
+    "@types/react-dom": "18.0.5",
+    "eslint": "8.18.0",
+    "eslint-config-next": "12.1.6",
     "postcss": "^8.3.11",
     "tailwindcss": "^2.2.17",
-    "typescript": "4.4.4"
+    "typescript": "4.7.4"
   }
 }
